--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -96,10 +96,10 @@ input[type=text] {
 
 .hero .btn {
     display: block;
-    width: 200px;
+    width: 500px;
 
     padding: 1em;
-    margin-top: 20px;
+    margin-top:60px;
     margin-left: auto;
     margin-right: auto;
 
@@ -160,7 +160,7 @@ footer {
 
 .social-wrapper {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
     gap: 10px;
     padding: 10px;
     align-self: center;
