Ajustes en adicionales
Se creo el tipo de letra y se agregaron adicionales derecho

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -93,7 +93,7 @@ input[type=text] {
     display: grid;
     grid-template-columns: 1fr;
     color: #223D40;
-    font-family: 'Kanit', sans-serif;
+    font-family: 'Hind Madurai', sans-serif;
 }
 
 .hero {
@@ -167,7 +167,7 @@ h4 {
 
 .text-justify {
     text-align: justify;
-    font-family: 'Kanit', sans-serif;
+    font-family: 'Hind Madurai', sans-serif;
 }
 
 .flex-container {
@@ -179,7 +179,7 @@ h4 {
 }
 
 .flex-adicionales1 {
-    background-color: white;
+    background-color: #4EBFBF;
     width: 200px;
     margin: 10px;
     text-align: center;
@@ -189,14 +189,71 @@ h4 {
 }
 
 .flex-adicionales2 {
-    background-color: #223D40;
+    background-color: #4EBFBF;
     width: 200px;
     margin: 10px;
     text-align: center;
-    line-height: 100px;
+    line-height: auto;
     font-size: 14px;
     flex: auto;
 }
+
+h2{
+    text-align: center;
+    line-height: auto;
+    font-size: 14px;
+    flex: auto;
+    font-weight: bold;
+}
+
+.p2 {
+    text-align: center;
+    line-height: auto;
+    font-size: 35px;
+    flex: auto;
+    font-weight: bold;
+}
+
+.p3 {
+    text-align: center;
+    line-height: auto;
+    font-size: 18px;
+    flex: auto;
+    font-weight: bold;
+}
+
+
+
+label {
+    display:none;
+    font: 1rem 'Hind Madurai', sans-serif;
+    color:#4EBFBF ;
+    text-align: left;
+}
+
+input {
+    margin: 0.4rem 0;
+    border: 1px solid white;
+    border-radius: 1em;
+    text-align: center;
+}
+
+
+
+
+
+
+
+/* .boletin{
+    background-color: white;
+    border: 1px solid #CCC;
+    border-radius: 1em;
+    text-align: center;
+    font-size: large;
+    font-weight: bold;
+} */
+
+
 
 .footer-wrapper {
     margin-top: 0rem;
