--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -188,7 +188,7 @@ h4 {
     flex: auto;
 }
 
-.flex-adicionales1 .card2 img {
+/* .flex-adicionales1 .card2 img {
     padding: 2rem;
     height: auto;
     width: auto;
@@ -197,7 +197,7 @@ h4 {
 
 .imagen-full2 {
     width: 100%;
-}
+} */
 
 
 
