--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -170,29 +170,47 @@ h4 {
     font-family: 'Hind Madurai', sans-serif;
 }
 
-.flex-container {
+
+.adicional-wrapper {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 10px;
+    grid-auto-rows: 500px 500px;
+    grid-template-areas:
+        "adicionales1 adicionales2";
+    /*position: center center;*/
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    background-color: #4EBFBF;
+    color: #223D40;
+}
+
+/*.flex-container {
     display: flex;
     background-color: #4EBFBF;
     justify-content: center;
     align-items: center;
     flex-direction: row;
-}
+}*/
 
-.flex-adicionales1 {
+.adicionales1-wrapper {
+    display: grid;
     background-color: #4EBFBF;
     width: 200px;
     margin: 10px;
     text-align: center;
-    line-height: 100px;
+    line-height: auto;
     font-size: 14px;
-    flex: auto;
+    align-self: center;
+    justify-self: center;
 }
 
 /* .flex-adicionales1 .card2 img {
     padding: 2rem;
     height: auto;
     width: auto;
-    
+
 }
 
 .imagen-full2 {
@@ -200,18 +218,21 @@ h4 {
 } */
 
 
-
-.flex-adicionales2 {
+.adicionales2.wrapper {
+    display: grid;
     background-color: #4EBFBF;
     width: 200px;
     margin: 10px;
     text-align: center;
     line-height: auto;
     font-size: 14px;
-    flex: auto;
+    align-self: center;
+    justify-self: center;
+
+
 }
 
-h2{
+h2 {
     text-align: center;
     line-height: auto;
     font-size: 14px;
@@ -235,23 +256,31 @@ h2{
     font-weight: bold;
 }
 
-
-
 label {
-    display:none;
+    display: flex;
     font: 1rem 'Hind Madurai', sans-serif;
-    color:#4EBFBF ;
+    color: #4EBFBF;
     text-align: left;
+    justify-content: center;
+    align-self: center;
 }
 
 input {
-    margin: 0.4rem 0;
-    border: 1px solid white;
+    margin: 0.4 rem 0;
     border-radius: 1em;
+    border-color: #4EBFBF;
     text-align: center;
+    justify-content: center;
+    align-self: center;
 }
 
-
+button{
+    padding: .5em 1em;
+    border:none;
+    background:#4EBFBF ;
+    cursor: pointer;
+    font-weight: bold;
+  }
 
 
 
@@ -346,9 +375,9 @@ form {
     width: 400px;
     /* Esquema del formulario */
     padding: 1em;
-    border: 1px solid #CCC;
+    border-color: #4EBFBF;
+    /*border: 1px solid #CCC;*/
     border-radius: 1em;
-    background-color: #4EBFBF;
 }
 
 ul {
