--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -151,6 +151,7 @@ input[type=text] {
     align-self: center center;
     font-size: 40px;
     font-weight: bold;
+    color: #223D40;
 }
 
 h4 {
@@ -168,6 +169,11 @@ h4 {
 .text-justify {
     text-align: justify;
     font-family: 'Hind Madurai', sans-serif;
+}
+
+.imagen-full2 {
+    width: 100%;
+    align-self: left;
 }
 
 
@@ -252,13 +258,13 @@ input {
     align-self: center;
 }
 
-button{
+button {
     padding: .5em 1em;
-    border:none;
-    background:#4EBFBF ;
+    border: none;
+    background: #4EBFBF;
     cursor: pointer;
     font-weight: bold;
-  }
+}
 
 /* Diseñando el footer */
 
@@ -266,18 +272,22 @@ ul {
     list-style: none;
     padding-left: 0;
 }
+
 footer {
     background-color: #4EBFBF;
     color: #223D40;
     line-height: 1.5;
 }
+
 footer a {
     text-decoration: none;
     color: #223D40;
 }
+
 a:hover {
     text-decoration: underline;
 }
+
 .ft-title {
     color: #223D40;
     font-family: 'Hind Madurai', sans-serif;
@@ -290,8 +300,10 @@ body {
     min-height: 100vh;
     flex-direction: column;
 }
+
 .container {
-    flex: 1;    /* same as flex-grow: 1; */
+    flex: 1;
+    /* same as flex-grow: 1; */
 }
 
 .ft-main {
@@ -299,17 +311,27 @@ body {
     display: flex;
     flex-wrap: wrap;
 }
+
 .ft-main-item {
     padding: 1.25rem;
-    min-width: 12.5rem /*200px*/;
+    min-width: 12.5rem
+        /*200px*/
+    ;
 }
 
-@media only screen and (min-width: 29.8125rem /*477px*/) {
+@media only screen and (min-width: 29.8125rem
+
+    /*477px*/
+) {
     .ft-main {
         justify-content: space-around;
     }
 }
-@media only screen and (min-width: 77.5rem /*1240px*/ ) {
+
+@media only screen and (min-width: 77.5rem
+
+    /*1240px*/
+) {
     .ft-main {
         justify-content: space-evenly;
     }
@@ -319,11 +341,13 @@ form {
     display: flex;
     flex-wrap: wrap;
 }
+
 input[type="email"] {
     border: 0;
     padding: 0.625rem;
     margin-top: 0.3125rem;
 }
+
 input[type="submit"] {
     background-color: #4EBFBF;
     color: #fff;
@@ -336,12 +360,14 @@ input[type="submit"] {
 .ft-social {
     padding: 0 1.875rem 1.25rem;
 }
+
 .ft-social-list {
     display: flex;
     justify-content: center;
     border-top: 1px #777 solid;
     padding-top: 1.25rem;
 }
+
 .ft-social-list li {
     margin: 0.5rem;
     font-size: 1.25rem;
@@ -351,110 +377,29 @@ input[type="submit"] {
     padding: 0.9375rem 1.875rem;
     background-color: #4EBFBF;
 }
+
 .ft-legal-list {
     width: 100%;
     display: flex;
     flex-wrap: wrap;
 }
+
 .ft-legal-list li {
     margin: 0.125rem 0.625rem;
     white-space: nowrap;
 }
-/* one before the last child */
+
+
 .ft-legal-list li:nth-last-child(2) {
-    flex: 1;       /* same as flex-grow: 1; */
+    flex: 1;
+  
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/*
-.menu-footer-grid {
-    grid-template-areas: 
-        "logo nav1 nav2 nav3 nav4"
-        "moz moz moz moz"
-        "legal legal legal legal . ";
-    grid-template-columns: minmax(260px, 2fr) repeat(4,minmax(0,1fr));
-}
-
-.menu-footer-nav-col1{
-    grid-area: nav1;
-    grid-row-start: nav1;
-    grid-row-end: nav1;
-    grid-column-start: nav1;
-    grid-column-end: nav1;
-}
-.menu-nav-heading {
-    font: var(--type-smaller-font-size);
-    margin: 0 0 .5rem;
-}
-
-.menu-footer-nav-list {
-    display: flex;
-    flex-direction: column;
-    gap: .5rem;
-}
-.menu-footer-nav-item {
-    font-size: var(--type-smaller-font-size);
-  }
-
-*/
-
-
-
-
-
-/*
-
-.footer-wrapper {
-    margin-top: 0rem;
-    background-color: #4EBFBF;
-    color: #223D40;
-    text-align: left;
-    padding: 2rem 1rem;
-    position: relative;
-}
-
-.pafooter-wrapper {
-    font-size: 18px;
-    font-weight: bold;
-    padding: 1rem;
-    text-align: left;
-    font-family: 'Hind Madurai', sans-serif;
-}
-
-.social-wrapper {
-    display: grid;
-    grid-template-columns: 50px 50px 50px 50px;
-    gap: 1px;
-    padding: 10px;
-    align-self: center;
-}
-
-.network-img {
-    height: 4rem;
-}
-*/
 .logoimg-wrapper {
-   text-align: center;
+    text-align: center;
 }
 
-.logo-img{
+.logo-img {
     height: 4rem;
     object-fit: cover;
     text-align: center;
@@ -468,124 +413,108 @@ input[type="submit"] {
     text-align: center;
     font-family: 'Hind Madurai', sans-serif;
 
-/*
-/* Responsive */
 
-@media screen and (max-width: 1200px) {
-    .product-wrapper {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        grid-gap: 10px;
-        padding: 10px;
-    }
+    /* Responsive */
 
-}
+    @media screen and (max-width: 1200px) {
+        .product-wrapper {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            grid-gap: 10px;
+            padding: 10px;
+        }
 
-@media screen and (max-width: 768px) {
-    .header-wrapper {
-        grid-template-columns: 1fr;
-        grid-template-rows: 5rem 5rem 5rem;
-        position: relative;
-    }
+    
 
-    .header-logo,
-    .header-title,
-    .header-input {
-        text-align: center;
-    }
+    @media screen and (max-width: 768px) {
+        .header-wrapper {
+            grid-template-columns: 1fr;
+            grid-template-rows: 5rem 5rem 5rem;
+            position: relative;
+        }
 
-
-    .card img {
-        height: 250px;
-    }
+        .header-logo,
+        .header-title,
+        .header-input {
+            text-align: center;
+        }
 
 
-    .product-wrapper {
-        display: grid;
-        grid-template-columns: 1fr;
-        grid-gap: 10px;
-        padding: 10px;
-    }
-
-    .additional-wrapper {
-        display: grid;
-        grid-template-columns: 1fr;
-        grid-gap: 10px;
-        padding: 10px;
-    }
+        .card img {
+            height: 250px;
+        }
 
 
+        .product-wrapper {
+            display: grid;
+            grid-template-columns: 1fr;
+            grid-gap: 10px;
+            padding: 10px;
+        }
+
+        .additional-wrapper {
+            display: grid;
+            grid-template-columns: 1fr;
+            grid-gap: 10px;
+            padding: 10px;
+        }
 
 
 
-/* Empieza el registro */
 
-form {
-    /* Centrar el formulario en la página */
-    margin: 0 auto;
-    width: 400px;
-    /* Esquema del formulario */
-    padding: 1em;
-    border-color: #4EBFBF;
-    /*border: 1px solid #CCC;*/
-    border-radius: 1em;
-}
 
-ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-}
+        /* Empieza el registro */
 
-form li+li {
-    margin-top: 1em;
-}
+        form {
+            /* Centrar el formulario en la página */
+            margin: 0 auto;
+            width: 400px;
+            padding: 1em;
+            border-color: #4EBFBF;
+            border-radius: 1em;
+        }
 
-label {
-    /* Tamaño y alineación uniforme */
-    display: inline-block;
-    width: 90px;
-    text-align: right;
-}
+        ul {
+            list-style: none;
+            padding: 0;
+            margin: 0;
+        }
 
-input,
-textarea {
-    /* Para asegurarse de que todos los campos de texto tienen la misma configuración de letra
-       Por defecto, las áreas de texto tienen un tipo de letra monoespaciada */
-    font: 1em sans-serif;
+        form li+li {
+            margin-top: 1em;
+        }
 
-    /* Tamaño uniforme del campo de texto */
-    width: 300px;
-    box-sizing: border-box;
+        label {
+            /* Tamaño y alineación uniforme */
+            display: inline-block;
+            width: 90px;
+            text-align: right;
+        }
 
-    /* Hacer coincidir los bordes del campo del formulario */
-    border: 1px solid #999;
-}
+        input,
+        textarea {
+            font: 1em sans-serif;
+            width: 300px;
+            box-sizing: border-box;
+            border: 1px solid #999;
+        }
 
-input:focus,
-textarea:focus {
-    /* Destacado adicional para elementos que tienen el cursor */
-    border-color: #000;
-}
+        input:focus,
+        textarea:focus {
+            border-color: #000;
+        }
 
-textarea {
-    /* Alinear los campos de texto multilínea con sus etiquetas */
-    vertical-align: top;
+        textarea {
+            vertical-align: top;
+            height: 5em;
+        }
 
-    /* Proporcionar espacio para escribir texto */
-    height: 5em;
-}
+        .button {
+            padding-left: 90px;
+            text-align: auto;
+        }
 
-.button {
-    /* Alinear los botones con los campos de texto */
-    padding-left: 90px;
-    text-align: auto;
-    /* mismo tamaño que los elementos de la etiqueta */
-}
-
-button {
-    /* Este margen adicional representa aproximadamente el mismo espacio que el espacio
-       entre las etiquetas y sus campos de texto */
-    margin-left: .5em;
-
-}
+        button {
+            margin-left: .5em;
+        }
+            
