--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,8 @@
     padding: 0;
     margin: 0;
     font-family: 'Hind Madurai', sans-serif;
+    background-color: #4EBFBF;
+    color: #223D40;
 }
 
 
