--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,10 +6,16 @@
     padding: 0;
     margin: 0;
     font-family: 'Hind Madurai', sans-serif;
-    background-color: #4EBFBF;
     color: #223D40;
 }
 
+a:link,
+a:visited,
+a:active {
+    color: #223D40;
+    text-decoration: none;
+    font-size: larger;
+}
 
 /* Definiendo caracteristicas del header */
 .nav-wrapper {
@@ -23,6 +29,32 @@
 
 }
 
+.container-fluid{
+    background-color: #4EBFBF;
+}
+
+.offcanvas-header{
+    background-color: white;
+}
+
+.offcanvas-body{
+    background-color: white;
+}
+
+.offcanvas-title{
+    background-color: white;
+}
+
+.nav-link{
+    background-color: white;
+}
+
+.dropdown-item{
+    background-color: white;
+}
+
+
+
 .imagen-full {
     width: 100%;
 }
@@ -32,20 +64,8 @@
     object-fit: cover;
 }
 
-.header-logo {
-    cursor: pointer;
-    padding: 10px;
-    text-align: left;
-    background-color: #4EBFBF
-}
 
-a:link,
-a:visited,
-a:active {
-    color: #223D40;
-    text-decoration: none;
-    font-size: larger;
-}
+
 
 .header-tittle {
     padding: 10px;
